<resources>
    <string name="app_name">Vision</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_quick_sms">QuickSMSActivity</string>
    <string name="title_dial_screen">DialScreen</string>
    <string name="title_activity_sos">SOSActivity</string>
    <string name="title_activity_quick_dial">QuickDialActivity</string>
    <string name="title_activity_phone_status">PhoneStatusActivity</string>
    <string name="title_activity_talking_sms">TalkingSMS</string>
    <string name="title_activity_talking_list">TalkingList</string>
    <string name="title_activity_where_am_i">Where Am I</string>
    <string name="title_activity_talking_sms_list">TalkingSmsList</string>
    <string name="title_activity_contacts_list">ContactsListActivity</string>
    <string name="title_activity_theme_settings">Theme Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_incoming_call">IncomingCallActivity</string>
    <string name="title_activity_contacts">ContactsActivity</string>
    <string name="title_activity_read_sms">ReadSmsActivity</string>
    <string name="title_activity_voice_note_recorder">voice note recorder</string>
    <string name="title_activity_calc">CalcActivity</string>
    <string name="title_activity_send_sms">SendSMSActivity</string>
    <string name="emptyHour">hh:mm:ss</string>
    <string name="next_message">Next message</string>
    <string name="previous_message">Previous message</string>
    <string name="dial_screen_whereami">dial Screen</string>
    <string name="dial_screen_info">The dialer consists of 12 buttons located in the middle of the screen.
        							The number dialed is at the top of the screen. At the bottom of the
        							screen there are 4 buttons: undo, reset, call, and quick S M S.</string>
    <string name="dial_number">please dial a number first!</string>
    <string name="quick_sms_button">quick S M S</string>
    <string name="digit1">1</string>
    <string name="one">one</string>
    <string name="digit2">2</string>
    <string name="two">two</string>
    <string name="digit3">3</string>
    <string name="three">three</string>
    <string name="digit4">4</string>
    <string name="four">four</string>
    <string name="digit5">5</string>
    <string name="five">five</string>
    <string name="digit6">6</string>
    <string name="six">six</string>
    <string name="digit7">7</string>
    <string name="seven">seven</string>
    <string name="digit8">8</string>
    <string name="eight">eight</string>
    <string name="digit9">9</string>
    <string name="nine">nine</string>
    <string name="digit0">0</string>
    <string name="zero">zero</string>
    <string name="asterisk">*</string>
    <string name="asterisk_ReadText">asterisk</string>
    <string name="number_sign">#</string>
    <string name="read_number_sign">hash</string>
    <string name="OK_button">OK</string>
    <string name="delete_button_read">undo</string>
    <string name="reset_button_read">reset</string>
    <string name="quick_dial_screen">quick dial screen</string>
    <string name="quick_dial_button">dial</string>
    <string name="deleted">deleted</string>
    <string name="MainActivity_wheramai">main screen</string>
    <string name="MainActivity_help">select one of eight options.</string>
    <string name="low_battery">low battery! \n</string>
    <string name="phoneStatus_message_veryPoorSignal_read">signal is very poor</string>
    <string name="missed_call">missed call</string>
    <string name="new_sms">new S M S \n</string>
    <string name="in_main_screen">in main screen</string>
    <string name="sos_button">S O S</string>
    <string name="time_button">time</string>
    <string name="where_am_i_button">where am i</string>
    <string name="alarm_clock_button">alarm clock</string>
    <string name="phone_status_button">phone status</string>
    <string name="settings_button">settings</string>
    <string name="contacts_button">contacts</string>
    <string name="read_sms_button">read S M S.</string>
    <plurals name="numberOfMissedCalls">
        <item quantity="one">one missed call.</item>
        <item quantity="other">%d missed calls.</item>
    </plurals>
    <plurals name="numberOfNewSMS">
        <item quantity="one">one new S M S.</item>
        <item quantity="other">%d new S M S messages.</item>
    </plurals>
    <string name="phoneStatus_whereami">phone Status Menu</string>
    <string name="phoneStatus_help">you can press one of three buttons. \n1) to get Battery level and charger status. \n2)to get Reception status. \n3)to get missed calles list.</string>
    <string name="phoneStatus_button_getBatteryStatus_read">battery</string>
    <string name="phoneStatus_button_getReceptionStatus_read">reception</string>
    <string name="phoneStatus_button_getMissedCalls_read">missed calls</string>
    <string name="no_missed_calls">there are no missed calls</string>
    <string name="called_at">called At </string>
    <string name="from"> from </string>
    <string name="phoneStatus_message_batteryStatus_read">battery level is %1$d %% %2$s.</string>
    <string name="phoneStatus_message_veryGoodSignal_read">signal is very good</string>
    <string name="phoneStatus_message_goodSignal_read">signal is good</string>
    <string name="phoneStatus_message_poorSignal_read">signal is poor</string>
    <string name="phoneStatus_message_noSignal_read">no Signal</string>
    <string name="phoneStatus_message_charging_read">charging</string>
    <string name="where_am_i_screen">where Am I screen</string>
    <string name="where_am_i_help">touch on screen to find your current location.</string>
    <string name="your_location_is">your Location is</string>
    <string name="could_not_find_a_location">could not find a location</string>
    <string name="No_Location_Found_Yet">no location found yet</string>
    <string name="finding_location">trying to find a location</string>
    <string name="initializing">initializing&#8230; </string>
    <string name="Location">location</string>
    <string name="title_activity_alarm">alarm clock</string>
    <string name="alarm_clock_help">you can press one of 4 buttons. \n1) to get alarm status. \n2) to set the alarm time. \n3) to activate the alarm clock. \n4) to cancel the alarm clock.</string>
    <string name="alarm_is_set_to">alarm is set to </string>
    <string name="alarm_is_on_at">alarm is on at </string>
    <string name="alarm_is_off_at">alarm is off at </string>
    <string name="alarm_is_canceled">alarm is Canceled </string>
    <string name="you_need_to_set_ther_alarm_first">you need to set the alarm first </string>
    <string name="alarm_is_activated">alarm is activated </string>
    <string name="noAlarm">no alarm</string>
    <string name="alarmStatus">alarm Status</string>
    <string name="setAlarmButton">set Alarm</string>
    <string name="startAlarm">start alarm</string>
    <string name="stopAlarm">stop alarm</string>
    <string name="setHour">hours</string>
    <string name="setMinutes">minutes</string>
    <string name="am"></string>
    <string name="pm"></string>
    <string name="and">and</string>
    <string name="snooze_time">1</string>
    <string name="alarm_is_off">alarm is turned Off.</string>
    <string name="snooze_for">snooze for</string>
    <string name="minutes">minutes</string>
    <string name="title_activity_set_clock">set clock</string>
    <string name="set_time_button">set clock area</string>
    <string name="set_clock_help">fling your finger up to increase the time and down to decrease the time\n tap the screen to confirm </string>
    <string name="speaking_clock_help">you can press one of 2 buttons. \n1) to hear the time. \n2) to hear the date.</string>
    <string name="ClockTitle">speaking clock</string>
    <string name="date_button">date</string>
    <string name="hourFormat">%1$d and %2$d minutes %3$s.</string>
    <string name="AM">AM</string>
    <string name="PM">PM</string>
    <string name="contacts_screen">contacts screen.</string>
    <string name="contacts_screen_help">you can touch screen in defferent places to hear: 1) contact name. 2) contact phone number. you can also call this person, send an S M S, send quick S M S, add new contact, edit contact or delete contact.</string>
    <string name="no_more_contacts">no more contacts</string>
    <string name="no_contacts">phone has no contacts</string>
    <string name="next_contact">next contact</string>
    <string name="previous_contact">previous contact</string>
    <string name="call_contact">call contact</string>
    <string name="send_sms">send S M S</string>
    <string name="delete_contact_success">deleted contact </string>
    <string name="delete_contact_failed">contact deletion failed</string>
    <string name="delete_contact_button">delete current contact</string>
    <string name="add_new_contact_button">add new contact</string>
    <string name="edit_contact_button">edit current contact</string>
    <string name="add_contact_screen">contact configuration screen</string>
    <string name="add_edit_contacts_help">you can edit a contact name and number. or - you can add new contact. for confirmation press the check button.</string>
    <string name="add_contact_success">contact added</string>
    <string name="edit_contact_success">contact edited</string>
    <string name="enter_a_name">enter a name</string>
    <string name="contact_name">contact name</string>
    <string name="contact_exist">contact already exists</string>
    <string name="required_fields">all required fields must be filled</string>
    <string name="confirmation_button">confirm contact details</string>
    <string name="title_activity_contacts_menu">contacts menu</string>
    <string name="contacts_help">you can press one of three buttons. \n1) to go to your favorite contacts screen. \n2)to go to your full contacts screen. \n3) to go to the dialer screen.</string>
    <string name="contact_list_screen">contact list screen</string>
    <string name="favorite_list_screen">favorite list screen</string>
    <string name="send_quick_sms_message">send quick S M S to: </string>
    <string name="call_message">call :  </string>
    <string name="Dialer">dialer</string>
    <string name="favorit_contacts_list">favorite contacts</string>
    <string name="contactsList">contacts</string>
    <string name="color_settings_screen">color settings screen</string>
    <string name="color_setting_help">you can press one of 7 buttons. each button is a different color setting for the system</string>
    <string name="WhiteBlack">white &amp; black</string>
    <string name="WhiteRed">white &amp; red</string>
    <string name="RedBlack">red &amp; black</string>
    <string name="GreenBlack">green &amp; black</string>
    <string name="WhiteGreen">white &amp; green</string>
    <string name="BlueBlack">blue &amp; black</string>
    <string name="WhiteBlue">white &amp; blue</string>
    <string name="settings_screen">settings screen</string>
    <string name="sos_config_screen_name">S O S configuration screen</string>
    <string name="ok_button">set number</string>
    <string name="calc_screen">calculator screen</string>
    <string name="plus">+</string>
    <string name="ReadPlus">plus</string>
    <string name="minus">-</string>
    <string name="ReadMinus">minus</string>
    <string name="times">*</string>
    <string name="ReadTimes">times</string>
    <string name="div">/</string>
    <string name="ReadDiv">div</string>
    <string name="dot">.</string>
    <string name="ReadDot">dot</string>
    <string name="equals">=</string>
    <string name="ReadEquals">equals</string>
    <string name="clear">C</string>
    <string name="ReadClear">clear</string>
    <string name="result">result</string>
</resources>